SASS PAGE response1

--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 
     <footer>
       <div class="footer-container">
-        <div>
+        <div class="f-div1">
           <img src="./img/MYLOGO.png" alt="" />
         </div>
-        <div>
+        <div class="f-div2">
           <h1>MENU</h1>
           <ul>
             <li>Lorem</li>
@@ -141,7 +141,7 @@
             <li>Lanis</li>
           </ul>
         </div>
-        <div>
+        <div class="f-div3">
           <h1>SERVICE</h1>
           <ul>
             <li>Market Research</li>
@@ -152,7 +152,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="f-div4">
           <ul class="icone">
             <li><i class="fa-brands fa-facebook"></i></li>
             <li><i class="fa-brands fa-twitter"></i></li>
